# kellasor

./: .gitignore  README.md  compose-local-infra.yml  compose-pro.yml  manage.py  pyproject.toml  requirements.txt
accounts_app/: Serializer.py  Serializers.py  models.py  tests.py  urls.py  utils.py  validate.py  views.py
accounts_app/migrations/: 0001_initial.py
class_app/: Serializer.py  admin.py  apps.py  models.py  urls.py  views.py
class_app/migrations/: 0001_initial.py  0002_classrooms_password.py
docker/: local.Dockerfile
kellasor/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
utls/: func.py  models.py  permission.py  response.py
